<resources>
    <string name="app_name">tugasAndroidNo2</string>
    <string name="text1">Gak ada biaya \n tersembunyi</string>
    <string name="text2">Gak ada lagi biaya admin bulanan atau \n pun biaya pembukaan rekening</string>
    <string name="textButton">REGISTER</string>
    <string name="text3">SAYA SUDAH PUNYA AKUN</string>
    <string name="text4">Version 2.28.1 (7447)</string>
</resources>
